--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                   <img src="img/image-daniel.jpg" alt="" class="border border-info border-3 rounded-circle">
                   <div class="ps-3">
                     <h1 class="h6 m-0">
-                      Silver Clifford
+                      Daniel Clifford
                     </h1>
                     <p class="h6 m-0 opacity">
-                      modificado desde visual studio code
+                      Verified Graduate
                     </p>
                   </div>
                 </div>
